Fix compile error
Signed-off-by: Tom Kaitchuck <tom.kaitchuck@emc.com>